--- a/06_Paper/ER-ED/method.tex
+++ b/06_Paper/ER-ED/method.tex
@@ -66,7 +66,8 @@
 
 \begin{document}
 
-\#2. Method
+\hypertarget{method}{%
+\section{2. Method}\label{method}}
 
 \hypertarget{participants}{%
 \subsection{2.1 Participants}\label{participants}}
