--- a/06_Paper/ER-ED/method.tex
+++ b/06_Paper/ER-ED/method.tex
@@ -72,4 +72,21 @@
 \hypertarget{participants}{%
 \subsection{2.1 Participants}\label{participants}}
 
+\begin{enumerate}
+\def\labelenumi{\roman{enumi}.}
+\setcounter{enumi}{29}
+\tightlist
+\item
+\end{enumerate}
+
+\hypertarget{section}{%
+\subsection{2.2}\label{section}}
+
+\begin{enumerate}
+\def\labelenumi{\roman{enumi}.}
+\setcounter{enumi}{29}
+\tightlist
+\item
+\end{enumerate}
+
 \end{document}
