--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -2,6 +2,8 @@
 output: 
   pdf_document:
     keep_tex: true
+bibliography: ER_ED.bib
+csl: apa7.csl
 ---
 
 ```{r setup, include = FALSE}
@@ -11,7 +13,8 @@ library(targets)
 
 # 2. Method
 
-"We report how we determined our sample size, all data exlusions (if any), all manipulations, and all measures in the study" in compliance with the 21-word-solution of open science 
+"We report how we determined our sample size, all data exlusions (if any), all manipulations, and all measures in the study" in compliance with the 21-word-solution of open science [@simmons2012]
+
 ## 2.1 Participants
 
 xxx.
