--- a/06_Paper/ER-ED/method.tex
+++ b/06_Paper/ER-ED/method.tex
@@ -89,12 +89,13 @@
 \hypertarget{method}{%
 \section{2. Method}\label{method}}
 
-``We report how we determined our sample size, all data exlusions (if
+``We report how we determined our sample size, all data exclusions (if
 any), all manipulations, and all measures in the study'' in compliance
 with the 21-word-solution of open science (Simmons et al., 2012)
 
-\hypertarget{participants}{%
-\subsection{2.1 Participants}\label{participants}}
+\hypertarget{power-analysis-and-participants}{%
+\subsection{2.1 Power analysis and
+participants}\label{power-analysis-and-participants}}
 
 \begin{enumerate}
 \def\labelenumi{\roman{enumi}.}
@@ -103,15 +104,23 @@ with the 21-word-solution of open science (Simmons et al., 2012)
 \item
 \end{enumerate}
 
-\hypertarget{section}{%
-\subsection{2.2}\label{section}}
+\hypertarget{experimental-procedure}{%
+\subsection{2.2 Experimental procedure}\label{experimental-procedure}}
 
-\begin{enumerate}
-\def\labelenumi{\roman{enumi}.}
-\setcounter{enumi}{29}
-\tightlist
-\item
-\end{enumerate}
+All session took place in a shielded cabin with constant lighting.
+Participants received information about the
+
+\hypertarget{emotion-regulation-paradigm}{%
+\subsection{2.3 Emotion regulation
+paradigm}\label{emotion-regulation-paradigm}}
+
+The ER task followed a block design (see Figure X). Participants were
+told to actively view neutral and negative pictures (see
+\protect\hyperlink{ux5cux23stimuli}{2.4. Stimuli}).
+
+\hypertarget{stimuli}{%
+\subsection*{2.4. Stimuli}\label{stimuli}}
+\addcontentsline{toc}{subsection}{2.4. Stimuli}
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
