--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -25,4 +25,6 @@ All session took place in a shielded cabin with constant lighting. Participants 
 
 ## 2.3 Emotion regulation paradigm 
 
-xxx.
+The ER task followed a block design (see Figure X). Participants were told to actively view neutral and negative pictures (see [2.4. Stimuli](##stimuli)).
+
+## 2.4. Stimuli
