--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1,26 +1,43 @@
 ---
-title: "COG-ED Manuscript"
-author: "Josephine"
-date: "12 8 2021"
-output: html_document
+title             : "COG-ED Manuscript"
+author            : "Josephine"
+date              : "13 8 2021"
+output            : html_document
+bibliography      : ref_COG-ED.bib
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(bibtex)
 ```
 
-## R Markdown
+# Introduction
 
--	in everyday life, effort and reward are closely intertwined (Botvinik 2009)
--	a reward is subjectively more valuable if it is obtained with less effort, i.e. “effort sets in place a reference point against which rewards are measured” (Botvinik 2009, p. 1)
--	research has not yet established which function best describes the relationship of effort and cost (Kool & Botvinick, 2018)
--	investigating effort and cost is challenging, because “effort is not a property of the target task alone, but also a function of the individual’s cognitive capacities, as well as the degree of effort voluntarily mobilized for the task, which in turn is a function of the individual’s reward sensitivity” (Kool & Botvinick, 2018, p. 902)
+In everyday life, effort and reward are closely intertwined [@Botvinick2009].
+With each decision a person makes, they have to evaluate whether the effort required to reach a goal is worth being exerted, given the reward they receive when reaching the goal.
+A reward is subjectively more valuable if it is obtained with less effort, so the required effort is used as a reference point for estimating the reward value [@Botvinick2009].
+However, the cost of the effort itself is also subjective, and research has not yet established which function best describes the relationship between effort and cost [@Kool2018].
+Investigating effort and cost is challenging because “effort is not a property of the target task alone, but also a function of the individual’s cognitive capacities, as well as the degree of effort voluntarily mobilized for the task, which in turn is a function of the individual’s reward sensitivity” [@Kool2018, p. 209].
 
--	the n-back task as it is known today, i.e. a working memory task with up to six levels of n, was developed by Mackworth in 1959
--	the n-back task is considered a working memory task because it requires simultaneous storage of past stimuli and processing of new stimuli (Jonides et al., 1997)
--	the n-back task monotonically increases activation in brain areas of working memory (Jonides et al., 1997; Owen et al., 2005)
--	errors and reaction time increase monotonically with levels of n (Jaeggi et al., 2010)
--	reliability measures of the n-back task are extremely mixed, presumably caused by ceiling effects in the easiest level, which might be the reason for its debatable validity, i.e. inconsistent associations of n-back performance and other measures such as tasks of executive functioning and fluid intelligence (Jaeggi et al., 2010)
+One task that is often used to investigate effort is the n-back task, a working memory task in which a continuous stream of stimuli, e.g. letters, is presented on screen and participants indicate via button press whether the current stimulus is the same as *n* stimuli before, with *n* being the level of difficulty between one and six [@Mackworth1959].
+It requires simultaneous storage of past stimuli and processing of new stimuli [@Jonides1997], and participants are asked to respond as quickly and as accurately as they can.
+The n-back task is well suited to investigate effort because it is an almost continuous manipulation of task load, as has been shown by monotonic increases in error rates and reaction times [@Jaeggi2010] as well as monotonic increases in brain activity in areas associated with working memory [@Jonides1997; @Owen2005].
+However, reliability measures of the n-back task are mixed, presumably due to ceiling effects in performance in the easiest level, causing inconsistent associations of n-back performance and measures such as executive functioning and fluid intelligence [@Jaeggi2010].
+
+A way to quantify the subjective cost of each n-back level has been developed by Westbrook et al. [-@Westbrook2013], called the Cognitive Effort Discounting Paradigm (COG-ED).
+First, the participants complete n-back level one to six to familiarize themselves with the task.
+Then, each level two to six is being compared with level one by asking the participants to decide between receiving 2\$ for the more difficult level or 1\$ for level one.
+It they choose the more difficult level, the reward for level one increases by 0.50\$, if the choose level one, it decreases by 0.50\$.
+This is repeated five more times, with each adjustment of the level one reward being half as big as in the previous step, while the reward for the more difficult level remains fixed at 2\$.
+The idea is to estimate the participants' subjective cost of the more difficult level by identifying the smallest reward they would still be okay with being paid for doing level one.
+Therefore, the higher the difficult level, the smaller the reward that the participants would accept for level one.
+The subjective value (SV) of each difficult level is then calculated by dividing the final reward value of level one by the fixed 2\$ reward of the difficult level.
+Westbrook et al. [-@Westbrook2013] used these SVs to investigate interindividual differences in effort discounting by plotting the SVs and computing an area under the curve (AUC).
+Younger participants had a larger AUC than older participants, i.e. they needed a lower monetary incentive for choosing the more difficult levels over level one.
+
+The AUC in the study by Westbrook et al. [-@Westbrook2013] was also associated with the participants' Need for Cognition score, a personality trait describing individuals who actively seek and enjoy effortful cognitive activities [@Cacioppo1982].
+
+
 
 -	higher n-back levels and more difficult signal-to-noise audio comprehension task levels are discounted in similar ways in the COG-ED paradigm -> doesn’t just work for n-back (Crawford et al., 2021)
 -	there are strong within-subjects associations of the SV of different cognitive domains, i.e. n-back and audio comprehension, even after controlling for performance d’, and even though the audio task was rated as less mentally demanding and effortful (Crawford et al., 2021)
