--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -50,4 +50,17 @@ In the present study, we will validate this adaptation by replicating the findin
 Additionally, we will apply the adaption to a task with different emotion regulation strategies to establish an effort discounting paradigm for task varieties that have no objective order of task load.
 The COG-ED paradigm has been applied to tasks with different domains before, showing that SVs across task domains correlate [@Crawford2021], but it has not been applied to tasks without objective task load so far.
 
+```{r}
+
+library(here)         # to set a directory without defined paths
+library(tidyverse)    # plotting and managing data
+
+# set top level directory to source file
+here::i_am("Manuscript.Rmd")
+
+# import n-back data into a list
+datalist_nback = lapply(list.files(pattern = "nback.*csv"), read.csv(here("Sampledata")), stringsAsFactors = FALSE, header = TRUE)
+
+```
+
 
