--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -176,7 +176,8 @@ The COG-ED paradigm has been applied to tasks with different domains before, sho
     # for 1-back
     
         if (is_empty(which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 1)) == FALSE) {
-          tempone <- append(tempone, data_ED$flexvalue[subjectindex[i]-1 + which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 1)]/2)
+          tempone <- append(tempone, data_ED$flexvalue[subjectindex[i]-1 +
+                                                         which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 1)]/2)
         } else {
           # do nothing
         }
@@ -190,7 +191,8 @@ The COG-ED paradigm has been applied to tasks with different domains before, sho
     # for 2-back
     
         if (is_empty(which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 2)) == FALSE) {
-          temptwo <- append(temptwo, data_ED$flexvalue[subjectindex[i]-1 + which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 2)]/2)
+          temptwo <- append(temptwo, data_ED$flexvalue[subjectindex[i]-1 +
+                                                         which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 2)]/2)
         } else {
           # do nothing
         }
@@ -204,7 +206,8 @@ The COG-ED paradigm has been applied to tasks with different domains before, sho
     # for 3-back
     
         if (is_empty(which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 3)) == FALSE) {
-          tempthree <- append(tempthree, data_ED$flexvalue[subjectindex[i]-1 + which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 3)]/2)
+          tempthree <- append(tempthree, data_ED$flexvalue[subjectindex[i]-1 +
+                                                             which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 3)]/2)
         } else {
           # do nothing
         }
@@ -218,7 +221,8 @@ The COG-ED paradigm has been applied to tasks with different domains before, sho
     # for 4-back
     
         if (is_empty(which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 4)) == FALSE) {
-          tempfour <- append(tempfour, data_ED$flexvalue[subjectindex[i]-1 + which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 4)]/2)
+          tempfour <- append(tempfour, data_ED$flexvalue[subjectindex[i]-1 +
+                                                           which(data_ED$fixedlevel[c(subjectindex[i]:(subjectindex[i+1]-1))] == 4)]/2)
         } else {
           # do nothing
         }
